third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/float/exp-leading-us.stderr
TOML parse error at line 1, column 20
  |
1 | exp-leading-us = 1e_23
  |                    ^
invalid floating-point number
